# nextjs-project-setup

./: CMakeLists.txt
include/: appointment.h  appointmentswidget.h  databasemanager.h  doctor.h  loginwindow.h  mainwindow.h  medicalrecord.h  medicalrecordswidget.h  patient.h  patientdashboard.h  registrationwindow.h  schedulewidget.h  settingswidget.h
